# gauntlet

./: .gitignore  Cargo.toml  README.md  plan.md
.chunkhound/: db.wal
.gauntlet/: pipeline.json
docs/: pipeline-spec.md
docs/plans/: pipeline-format-v2.md  remote-agents.md
src/: artifacts.rs  cache.rs  checkout.rs  compiler.rs  config.rs  dashboard.rs  github.rs  github_app.rs  images.rs  lib.rs  main.rs  matrix.rs  schema.rs  serve.rs  tui.rs  webhook.rs  workspace.rs  worktree.rs
src/convert/: github_actions.rs  mod.rs
