[package]
name = "gauntlet"
description = "CI pipeline runner powered by Tasked"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "gauntlet"
path = "src/main.rs"

[dependencies]
tasked = { git = "https://github.com/bradleydwyer/tasked", features = ["docker"] }
tasked-types = { git = "https://github.com/bradleydwyer/tasked" }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
