[package]
name = "gauntlet"
description = "CI pipeline runner powered by Tasked"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "gauntlet"
path = "src/main.rs"

[dependencies]
tasked = { path = "../tasked/tasked", features = ["docker"] }
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
shellexpand = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
base64 = "0.22"
tempfile = "3"
